--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-REACT_APP_CANDY_MACHINE_ID=33Qy7Ss6W2JKfqZuroeR2q8DenWo3ZYpnFM2r4EFZMX7
+# REACT_APP_CANDY_MACHINE_ID=33Qy7Ss6W2JKfqZuroeR2q8DenWo3ZYpnFM2r4EFZMX7
+REACT_APP_CANDY_MACHINE_ID=5x34XDhp4EywbSBjqziQjGmnQ4yQ5znuA3nudGpXjS7V
 REACT_APP_SOLANA_NETWORK=mainnet-beta
 REACT_APP_SOLANA_RPC_HOST=https://api.mainnet-beta.solana.com
 
